--- a/history/sources/secondary.html
+++ b/history/sources/secondary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-11-06 Thu 23:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Secondary sources</title>
@@ -307,6 +307,7 @@ This post provides a bibiliography of high-quality, information-dense books on I
 <li>JP Sharma (1968), <i>Republics in Ancient India</i>. 294 pages. Full text from <a href="https://www.academia.edu/26226536/J_P_Sharma_Republics_in_Ancient_India_Leiden_1968_">academia.edu</a>.</li>
 <li>VS Agrawala (1953), <i>India as known to Pāṇini</i>. 594 pages. Full text from <a href="https://archive.org/details/in.gov.ignca.4695/page/n495/mode/2up">archive.org</a>.</li>
 <li>Ananda Coomaraswamy (1942), <i>Spiritual Authority And Temporal Power In The Indian Theory Of Government</i>. 104 pages. Full text from <a href="http://archive.org/details/in.ernet.dli.2015.528987">archive.org</a>.</li>
+<li>JC Heesterman (1985), <i>The Inner Conflict of Tradition</i>. Preview on <a href="https://www.google.com/books/edition/_/Ju5x1cUD0aAC?hl=en&amp;gbpv=1&amp;kptab=overview">Google Books</a>.</li>
 <li>Moti Chandra (1973), <i>The World of Courtesans.</i> 272 pages. Full text from <a href="https://archive.org/details/in.ernet.dli.2015.37290/page/n25/mode/2up">archive.org</a>.</li>
 <li>Radhakumud Mookerji (1943), <i>Chandragupta Maurya and his times</i>. Full text from <a href="https://archive.org/details/in.ernet.dli.2015.281321">archive.org</a>.</li>
 <li>Roshen Alkazi (1982), <i>Ancient Indian Costume</i>. Full text from <a href="https://archive.org/details/in.gov.ignca.7697">archive.org</a>.</li>
@@ -394,7 +395,7 @@ Some particularly good snippets by these authors: - REDACTED, _<a href="https://
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-11-06 Thu 23:19</p>
 </div>
 </body>
 </html>
