--- a/politics/leli-ideology/cop.html
+++ b/politics/leli-ideology/cop.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-11-04 Tue 17:00 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Good Cop Bad Cop</title>
@@ -276,14 +276,14 @@ A lot of Indians think that e.g. the Indira Gandhi govt releasing ~1 lakh Pakist
 </p>
 
 <p>
-<img src="/img/memes/tug_of_war.png" alt="tug_of_war.png" />
+<img src="/img/memes/tug_of_war/tug_of_war.png" alt="tug_of_war.png" />
 </p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-11-04 Tue 17:00</p>
 </div>
 </body>
 </html>
