--- a/politics/nirnaya-pill/hoejabi.html
+++ b/politics/nirnaya-pill/hoejabi.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-11-06 Thu 23:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Muslim supremacy is orthogonal to Muslim traditionalism (Hoejabis are the real threat) ⭐</title>
@@ -208,6 +208,7 @@
 <li><a href="#org54d9b8f">1. On &ldquo;Conservative vs Liberal Muslims&rdquo;</a></li>
 <li><a href="#org4124f29">2. Just because Zohran&rsquo;s gay doesn&rsquo;t mean he isn&rsquo;t an Islamist</a></li>
 <li><a href="#org85a7921">3. 2</a></li>
+<li><a href="#orgd11cd46">4. 3</a></li>
 </ul>
 </div>
 </div>
@@ -318,10 +319,48 @@ Perhaps a reason westerners do not get the Islamism=/=Muslim orthodoxy distincti
 </p>
 </div>
 </div>
+<div id="outline-container-orgd11cd46" class="outline-2">
+<h2 id="orgd11cd46"><span class="section-number-2">4.</span> 3</h2>
+<div class="outline-text-2" id="text-4">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1986022762989711576">Twitter</a></p>
+</p>
+
+<p>
+While I agree with &ldquo;no identity politics&rdquo; in general, commenting on Islam is <i>not</i> identity politics. Unlike races or even other religions, Islam <b>is</b> a totalizing ideology for its adherents.
+</p>
+
+<p>
+&ldquo;He&rsquo;s not an Islamist he&rsquo;s a leftist&rdquo; type rhetoric is simply counter-productive: we need to draw an almost-<i>equivalence</i> between Leftism and Islam (because as things stand their beliefs and interests are very much intertwined), in the same way that Leftists claim &ldquo;Palestine IS queer liberation IS climate justice IS BLM&rdquo;. Omnicause-building is not some weird quirk of leftists, it is essential for keeping your base constantly &ldquo;mobilized&rdquo;.
+</p>
+
+<p>
+With that said, a little bird mentioned this to me in a DM: the &ldquo;Islamist&rdquo; accusations against Zohran simply don&rsquo;t stick: while he is Islamist(-adjacent), <b><i>this is a point that actually needs to be made</i></b>: until the &ldquo;<code>Muslim supremacism =/= orthodoxy</code>&rdquo; and &ldquo;Red-Green alliance&rdquo; memes are widely-understood, crude memes about 9/11 and burqas will not stick.
+</p>
+
+<p>
+The Islamist problem with Mamdani is:
+</p>
+
+<ul class="org-ul">
+<li>He would compromise every one of your nation&rsquo;s interests to prioritize vile Islamist causes like Palestine or Kashmiri separatism. (yes, I know he has no influence on foreign policy as mayor; don&rsquo;t be a midwit)</li>
+
+<li>the incredible Muslim ethno-<i>narcissism</i> of endlessly complaining about the (almost non-existent) &ldquo;backlash against peaceful Muslims&rdquo; and turning it into another &ldquo;great American crime&rdquo; to be repentant for.</li>
+</ul>
+
+<p>
+&ldquo;but a Leftist of non-Muslim background would do the same!&rdquo;
+</p>
+
+<p>
+yes, and that tells you exactly how much influence Islamism has over American politics, that it is the number-1 cause for the American Left! You cannot turn a blind eye or pretend it doesn&rsquo;t exist.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-11-06 Thu 23:19</p>
 </div>
 </body>
 </html>
