--- a/politics/nirnaya-pill/leli_and_islam.html
+++ b/politics/nirnaya-pill/leli_and_islam.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-10-18 Sat 00:20 -->
+<!-- 2025-11-06 Thu 23:19 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Left-liberalism weds Islam ⭐</title>
@@ -205,10 +205,11 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org75f6312">1. femme-fatale</a></li>
-<li><a href="#orgbfd74c0">2. continuation</a></li>
-<li><a href="#org30a7a10">3. the wedding anniversary</a></li>
-<li><a href="#orga1432ba">4. Would education solve Islamic radicalism?</a></li>
+<li><a href="#orga91d77a">1. femme-fatale</a></li>
+<li><a href="#org4747074">2. continuation</a></li>
+<li><a href="#orgf8f7f83">3. the wedding anniversary</a></li>
+<li><a href="#org24c905a">4. Would education solve Islamic radicalism?</a></li>
+<li><a href="#org1283e24">5. explaining islamism</a></li>
 </ul>
 </div>
 </div>
@@ -227,8 +228,8 @@ Despite RW cope, neither side is getting &ldquo;played&rdquo;. Yes, she beats hi
 <p>
 All &ldquo;fights&rdquo; between them are basically the husband making practical points like &ldquo;yes of course I will unalive the Z for you, but if I do it NOW I will go to jail and you will have no one to carry your bodybags every Friday!!&rdquo;
 </p>
-<div id="outline-container-org75f6312" class="outline-2">
-<h2 id="org75f6312"><span class="section-number-2">1.</span> femme-fatale</h2>
+<div id="outline-container-orga91d77a" class="outline-2">
+<h2 id="orga91d77a"><span class="section-number-2">1.</span> femme-fatale</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1938014895041343885">Twitter</a></p>
@@ -243,8 +244,8 @@ These two ideologies are married. You won&rsquo;t play them against each other. 
 </p>
 </div>
 </div>
-<div id="outline-container-orgbfd74c0" class="outline-2">
-<h2 id="orgbfd74c0"><span class="section-number-2">2.</span> continuation</h2>
+<div id="outline-container-org4747074" class="outline-2">
+<h2 id="org4747074"><span class="section-number-2">2.</span> continuation</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1871887635272335835">Twitter</a></p>
@@ -263,8 +264,8 @@ Constantly trying to out-liberal and pull down other RWs, hoping that he will on
 </p>
 </div>
 </div>
-<div id="outline-container-org30a7a10" class="outline-2">
-<h2 id="org30a7a10"><span class="section-number-2">3.</span> the wedding anniversary</h2>
+<div id="outline-container-orgf8f7f83" class="outline-2">
+<h2 id="orgf8f7f83"><span class="section-number-2">3.</span> the wedding anniversary</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1928296307359092795">Twitter</a></p>
@@ -287,8 +288,8 @@ If there were a single image capturing the moral bankruptcy of Western academia 
 </p>
 </div>
 </div>
-<div id="outline-container-orga1432ba" class="outline-2">
-<h2 id="orga1432ba"><span class="section-number-2">4.</span> Would education solve Islamic radicalism?</h2>
+<div id="outline-container-org24c905a" class="outline-2">
+<h2 id="org24c905a"><span class="section-number-2">4.</span> Would education solve Islamic radicalism?</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 <p class="byline">Also published on <a href="https://aratt.ai/@srajma/8">Arattai</a></p>
@@ -348,10 +349,48 @@ The same is <i>not</i> true between Left-liberalism and Islam: Left-liberalism i
 </p>
 </div>
 </div>
+<div id="outline-container-org1283e24" class="outline-2">
+<h2 id="org1283e24"><span class="section-number-2">5.</span> explaining islamism</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1986022762989711576">Twitter</a></p>
+</p>
+
+<p>
+While I agree with &ldquo;no identity politics&rdquo; in general, commenting on Islam is not identity politics. Unlike races or even other religions, Islam <b>is</b> a totalizing ideology for its adherents.
+</p>
+
+<p>
+&ldquo;He&rsquo;s not an Islamist he&rsquo;s a leftist&rdquo; type rhetoric is simply counter-productive: we need to draw an almost-equivalence between Leftism and Islam (because as things stand their beliefs and interests are very much intertwined), in the same way that Leftists claim &ldquo;Palestine IS queer liberation IS climate justice IS BLM&rdquo;. Omnicause-building is not some weird quirk of leftists, it is essential for keeping your base constantly &ldquo;mobilized&rdquo;.
+</p>
+
+<p>
+With that said, a little bird mentioned this to me in a DM: the &ldquo;Islamist&rdquo; accusations against Zohran simply don&rsquo;t stick: while he is Islamist(-adjacent), this is a point that actually needs to be made: until the &ldquo;Muslim supremacism <code>/</code> orthodoxy&rdquo; and &ldquo;Red-Green alliance&rdquo; memes are widely-understood, crude memes about 9/11 and burqas will not stick.
+</p>
+
+<p>
+The Islamist problem with Mamdani is:
+</p>
+
+<ul class="org-ul">
+<li>He would compromise every one of your nation&rsquo;s interests to prioritize vile Islamist causes like Palestine or Kashmiri separatism. (yes, I know he has no influence on foreign policy as mayor; don&rsquo;t be a midwit)</li>
+
+<li>the incredible Muslim ethno-narcissism of endlessly complaining about the (almost non-existent) &ldquo;backlash against peaceful Muslims&rdquo; and turning it into another &ldquo;great American crime&rdquo; to be repentant for.</li>
+</ul>
+
+<p>
+&ldquo;but a Leftist of non-Muslim background would do the same!&rdquo;
+</p>
+
+<p>
+yes, and that tells you exactly how much influence Islamism has over American politics, that it is the number-1 cause for the American Left! You cannot turn a blind eye or pretend it doesn&rsquo;t exist.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-10-18 Sat 00:20</p>
+<p class="date">Created: 2025-11-06 Thu 23:19</p>
 </div>
 </body>
 </html>
