--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-04 Tue 15:27 -->
+<!-- 2025-11-11 Tue 17:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap of srajma.github.io</title>
@@ -222,9 +222,9 @@
 <li>hinduism
 <ul class="org-ul">
 <li><a href="history/hinduism/caste.html">Caste</a></li>
+<li><a href="history/hinduism/tolerance.html">Core principles of Hinduism and its epistemology for assimilating external knowledge ⭐</a></li>
 <li><a href="history/hinduism/theology.html">Early Vedic society and theological developments 🏗️</a></li>
 <li><a href="history/hinduism/restraint.html">Indriyajaya, environmentalism, the trad fallacy and adapting Hinduism for modernity ⭐</a></li>
-<li><a href="history/hinduism/tolerance.html">Is Hinduism tolerant? Is it Nihilistic? ⭐</a></li>
 <li><a href="history/hinduism/philosophy.html">The early development of Indian philosophy ⭐</a></li>
 <li><a href="history/hinduism/identities.html">Traditional names for India and Hinduism + Who is a Hindu?</a></li>
 </ul></li>
@@ -263,7 +263,6 @@
 <li>leli-ideology
 <ul class="org-ul">
 <li><a href="politics/leli-ideology/cop.html">Good Cop Bad Cop</a></li>
-<li><a href="politics/leli-ideology/leli_and_islam.html">Left-liberalism weds Islam ⭐</a></li>
 <li><a href="politics/leli-ideology/totalizing.html">Left-liberals view foreign policy through an ideological, not material lens</a></li>
 <li><a href="politics/leli-ideology/liberal_ideology.html">Modern liberalism as the ideology of dehātization ⭐</a></li>
 <li><a href="politics/leli-ideology/origin.html">Origin and self-conception of Left-liberalism</a></li>
@@ -305,6 +304,7 @@
 <li>nirnaya-pill
 <ul class="org-ul">
 <li><a href="politics/nirnaya-pill/veto.html">Hindu Svarājya and the Muslim veto ⭐</a></li>
+<li><a href="politics/nirnaya-pill/leli_and_islam.html">Left-liberalism weds Islam ⭐</a></li>
 <li><a href="politics/nirnaya-pill/hoejabi.html">Muslim supremacy is orthogonal to Muslim traditionalism (Hoejabis are the real threat) ⭐</a></li>
 <li><a href="politics/nirnaya-pill/nirnaya.html">Nirṇaya</a></li>
 <li><a href="politics/nirnaya-pill/firebombing.html">On Firebombing Walmarts ⭐</a></li>
@@ -334,7 +334,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-04 Tue 15:27</p>
+<p class="date">Created: 2025-11-11 Tue 17:41</p>
 </div>
 </body>
 </html>
