--- a/other-people/history.html
+++ b/other-people/history.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-11-18 Tue 01:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Snippetjeetry</title>
@@ -860,6 +860,48 @@ This is not true for the bound ones of course. We must continue to act in a deta
 
 <p>
 Jai Sita Rama
+</p>
+
+<p>
+<p class="byline">Published on <a href="https://x.com/arya_amsha/status/1397508747279306755">Twitter</a> by <a href="https://x.com/arya_amsha">@arya_amsha</a></p>
+</p>
+
+<p>
+Found a remarkable convergence in Ancient Greek &amp; Indian exegesis.The Neoplatonist Philosopher Saloustious &amp; the Mīmāṃsakā Kumārila Bhaṭṭa both make a similar point on the need of divine stories/itihāsa/mythos. They say truth about divinity is concealed in&#x2026;+
+&#x2026; the stories about the Gods so that men of all forms of intelligence can grasp their meaning. Why?
+</p>
+
+<p>
+Let&rsquo;s see what Saloustious says first:
+</p>
+
+<p>
+&ldquo;Besides, to inform all men of the truth concerning the gods, produces contempt in the unwise, from their incapacity of learning..+
+..and negligence in the studious; but concealing truth in fables, prevents the contempt of the former, and compels the latter to philosophize..Of fables, some are theological, others physical, others belonging to soul, others material, and lastly, others mixed from these.&rdquo;
+&ldquo;Πρὸς δὲ τούτοις, τὸ μὲν πάντας τὴν περὶ Θεῶν ἀλήθειαν διδάσκειν ἐθέλειν τοῖς μὲν ἀνοήτοις, διὰ τὸ μὴ δύνασθαι μανθάνειν , καταφρόνησιν, τοῖς δὲ σπουδαίοις ῥᾳθυμίαν ἐμποιεῖ· τὸ δὲ διὰ μύθων τἀληθὲς ἐπικρύπτειν τοὺς μὲν καταφρονεῖν οὐκ ἐᾷ&#x2026;&rdquo;
+Discover more
+Entrepreneurship coaching programs
+Let us see what Kumārila Bhaṭṭa says,
+</p>
+
+<p>
+&ldquo;And as the works (Itihāsa, Purāṇa) were composed (by Vālmiki, Vyāsa) to be understood by men of different types of intelligences.. different methods are used. Here, some men understand by injunction alone, some by exaggerated stories..+
+&#x2026;.Some men need lenghty stories to understand, some get the job done in short stories. The goal is that the mind of all men should be captivated [seized] by the story&rdquo;
+प्रतिपाद्यानां च विचित्रबुद्धित्वाद्युक्तमेवैतत् । इह केचिद्विधिमात्रेण प्रतिपद्यन्ते । अपरे सार्थवादेनापरेऽल्पेनार्थवादेनापरे महता । सर्वेषां च चित्तं ग्रहीतव्यमित्येवमारम्भः
+Indeed, now we see both our theologians are making a similar underlying point. The myths of the Gods are not always literal. But they are meant to be taken as such by those who aren&rsquo;t of a high intelligence. But the wise philosophize &amp; find the underlying (adhyātmika) meanings.
+Kumārila further goes on to say the root (mūla) of all these stories (arthavādaḥ) can be&#x2026;
+</p>
+
+<ol class="org-ol">
+<li>Shruti/Veda</li>
+<li>Daily experience of happiness, wealth, heroism etc</li>
+<li>Poetic fancy, made by the poets themselves</li>
+</ol>
+
+<p>
+केचिद्वैदिका एव केचिल्लौकिका एव केचित्तु स्वयमेव काव्यन्यायेन रचिताः
+Saloustious gives an example - the judgement of Paris in which he gives the apple to Aphrodite. The apple is the world, Paris is a source living on sense alone. So he only sees beauty &amp; says the world subsists by beauty alone - so he gives the apple to Aphrodite.
+Another example he gives is Chronos physically embodifying the energy of time. Children are devoured by their parents as time devours itself by itself.
 </p>
 </div>
 </div>
@@ -1831,7 +1873,7 @@ Followed by this passage..
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-11-18 Tue 01:57</p>
 </div>
 </body>
 </html>
