--- a/other-people/takes.html
+++ b/other-people/takes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-11-18 Tue 01:57 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Favorite tweets by others</title>
@@ -243,29 +243,34 @@
 <li><a href="#org1ade81d">3.1. random monkey</a></li>
 </ul>
 </li>
-<li><a href="#orgabf42e6">4. Lolbert Pitāmāh</a>
+<li><a href="#org404c21e">4. Emissary</a>
 <ul>
-<li><a href="#orgb626bc9">4.1. when to criticize</a></li>
-<li><a href="#orgaeced85">4.2. agenda detection thread</a></li>
-<li><a href="#org7f2af67">4.3. people over ideas</a></li>
-<li><a href="#org426a96c">4.4. BJP mental model</a></li>
-<li><a href="#orgc0ce8e7">4.5. RW ecosystem</a></li>
-<li><a href="#orge0017e8">4.6. Thank the goy</a></li>
-<li><a href="#orgdd3dbe3">4.7. micro-targeting</a></li>
+<li><a href="#orgc8b9e2a">4.1. principles for how to talk</a></li>
 </ul>
 </li>
-<li><a href="#org1beda83">5. Misc</a>
+<li><a href="#orgabf42e6">5. Lolbert Pitāmāh</a>
 <ul>
-<li><a href="#orgcd4e4e0">5.1. sub sub sub jati</a></li>
-<li><a href="#orgf4d1dce">5.2. McAdams&rsquo; eternal boomer wisdom</a></li>
-<li><a href="#org51c6894">5.3. white guilt</a></li>
-<li><a href="#org58d67cb">5.4. this dipshit ankit mishra</a></li>
-<li><a href="#org6882465">5.5. elite factionalism</a></li>
-<li><a href="#orga254842">5.6. baby boom</a></li>
-<li><a href="#org7b62be6">5.7. Polite fictions</a></li>
-<li><a href="#org76cfaf4">5.8. Advanced Pakistani Sociology</a></li>
-<li><a href="#orgd6d2bac">5.9. American foreign policy</a></li>
-<li><a href="#org459fd55">5.10. Rahul Gandhi</a></li>
+<li><a href="#orgb626bc9">5.1. when to criticize</a></li>
+<li><a href="#orgaeced85">5.2. agenda detection thread</a></li>
+<li><a href="#org7f2af67">5.3. people over ideas</a></li>
+<li><a href="#org426a96c">5.4. BJP mental model</a></li>
+<li><a href="#orgc0ce8e7">5.5. RW ecosystem</a></li>
+<li><a href="#orge0017e8">5.6. Thank the goy</a></li>
+<li><a href="#orgdd3dbe3">5.7. micro-targeting</a></li>
+</ul>
+</li>
+<li><a href="#org1beda83">6. Misc</a>
+<ul>
+<li><a href="#orgcd4e4e0">6.1. sub sub sub jati</a></li>
+<li><a href="#orgf4d1dce">6.2. McAdams&rsquo; eternal boomer wisdom</a></li>
+<li><a href="#org51c6894">6.3. white guilt</a></li>
+<li><a href="#org58d67cb">6.4. this dipshit ankit mishra</a></li>
+<li><a href="#org6882465">6.5. elite factionalism</a></li>
+<li><a href="#orga254842">6.6. baby boom</a></li>
+<li><a href="#org7b62be6">6.7. Polite fictions</a></li>
+<li><a href="#org76cfaf4">6.8. Advanced Pakistani Sociology</a></li>
+<li><a href="#orgd6d2bac">6.9. American foreign policy</a></li>
+<li><a href="#org459fd55">6.10. Rahul Gandhi</a></li>
 </ul>
 </li>
 </ul>
@@ -797,13 +802,37 @@ Problem among our people here isn&rsquo;t the lack of shatrubodh but highly misp
 </div>
 </div>
 </div>
-<div id="outline-container-orgabf42e6" class="outline-2">
-<h2 id="orgabf42e6"><span class="section-number-2">4.</span> Lolbert Pitāmāh</h2>
+<div id="outline-container-org404c21e" class="outline-2">
+<h2 id="org404c21e"><span class="section-number-2">4.</span> Emissary</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgb626bc9" class="outline-3">
-<h3 id="orgb626bc9"><span class="section-number-3">4.1.</span> when to criticize</h3>
+<div id="outline-container-orgc8b9e2a" class="outline-3">
+<h3 id="orgc8b9e2a"><span class="section-number-3">4.1.</span> principles for how to talk</h3>
 <div class="outline-text-3" id="text-4-1">
+<p>
+<p class="byline">Published on <a href="https://x.com/TheEmissaryCo/status/1983707865996259652">Twitter</a> by <a href="https://x.com/TheEmissaryCo">@TheEmissaryCo</a></p>
+First things first, stop preaching to the choir &amp; start targeting NORMIES.
+</p>
+
+<p>
+That means:
+</p>
+
+<ol class="org-ol">
+<li>No retarded slurs against groups.</li>
+<li>Stop edgelording/countersignaling</li>
+<li>Be beautiful instead of UGLY AF DEHATI CODED in messaging</li>
+</ol>
+</div>
+</div>
+</div>
+<div id="outline-container-orgabf42e6" class="outline-2">
+<h2 id="orgabf42e6"><span class="section-number-2">5.</span> Lolbert Pitāmāh</h2>
+<div class="outline-text-2" id="text-5">
+</div>
+<div id="outline-container-orgb626bc9" class="outline-3">
+<h3 id="orgb626bc9"><span class="section-number-3">5.1.</span> when to criticize</h3>
+<div class="outline-text-3" id="text-5-1">
 <p>
 <p class="byline">Published on <a href="https://x.com/Me_Predictor/status/1940477431158366589">Twitter</a> by <a href="https://x.com/Me_Predictor">@Me_Predictor</a></p>
 Its very simple
@@ -816,8 +845,8 @@ Its very simple
 </div>
 </div>
 <div id="outline-container-orgaeced85" class="outline-3">
-<h3 id="orgaeced85"><span class="section-number-3">4.2.</span> agenda detection thread</h3>
-<div class="outline-text-3" id="text-4-2">
+<h3 id="orgaeced85"><span class="section-number-3">5.2.</span> agenda detection thread</h3>
+<div class="outline-text-3" id="text-5-2">
 <p>
 <p class="byline">Published on <a href="https://x.com/Me_Predictor/status/1941396605900636511">Twitter</a> by <a href="https://x.com/Me_Predictor">@Me_Predictor</a></p>
 Doing a thread which enumerates the various levels of agenda detection cc@randomvichar
@@ -857,8 +886,8 @@ levels 6 and 7 are tbf re8ard and midtwit detection respectively
 </div>
 </div>
 <div id="outline-container-org7f2af67" class="outline-3">
-<h3 id="org7f2af67"><span class="section-number-3">4.3.</span> people over ideas</h3>
-<div class="outline-text-3" id="text-4-3">
+<h3 id="org7f2af67"><span class="section-number-3">5.3.</span> people over ideas</h3>
+<div class="outline-text-3" id="text-5-3">
 <p>
 <p class="byline">Published on <a href="https://x.com/Me_Predictor/status/1855267682482057658">Twitter</a> by <a href="https://x.com/Me_Predictor">@Me_Predictor</a></p>
 joker mid IQs: focus on the idea, not on people
@@ -882,8 +911,8 @@ GADOAT agenda detector is undefeated.
 </div>
 </div>
 <div id="outline-container-org426a96c" class="outline-3">
-<h3 id="org426a96c"><span class="section-number-3">4.4.</span> BJP mental model</h3>
-<div class="outline-text-3" id="text-4-4">
+<h3 id="org426a96c"><span class="section-number-3">5.4.</span> BJP mental model</h3>
+<div class="outline-text-3" id="text-5-4">
 <p>
 <p class="byline">Published on <a href="https://x.com/Me_Predictor/status/1864374740955046273">Twitter</a> by <a href="https://x.com/Me_Predictor">@Me_Predictor</a></p>
 </p>
@@ -910,8 +939,8 @@ though twitter too is a form of populist revolt ;)
 </div>
 </div>
 <div id="outline-container-orgc0ce8e7" class="outline-3">
-<h3 id="orgc0ce8e7"><span class="section-number-3">4.5.</span> RW ecosystem</h3>
-<div class="outline-text-3" id="text-4-5">
+<h3 id="orgc0ce8e7"><span class="section-number-3">5.5.</span> RW ecosystem</h3>
+<div class="outline-text-3" id="text-5-5">
 <p>
 <p class="byline">Published on <a href="https://x.com/Me_Predictor/status/1799918511734829540">Twitter</a> by <a href="https://x.com/Me_Predictor">@Me_Predictor</a></p>
 State of the RW narrative/ intellectual / ecosystem as it stands - some hard truths:
@@ -939,8 +968,8 @@ In Hindi media, its probably a similar story,  things probably peaked few years 
 </div>
 </div>
 <div id="outline-container-orge0017e8" class="outline-3">
-<h3 id="orge0017e8"><span class="section-number-3">4.6.</span> Thank the goy</h3>
-<div class="outline-text-3" id="text-4-6">
+<h3 id="orge0017e8"><span class="section-number-3">5.6.</span> Thank the goy</h3>
+<div class="outline-text-3" id="text-5-6">
 <ol class="org-ol">
 <li>Liberal leadership has the ability to ruthlessly push an advantage when they have one.  Their down the lines have enough common sense and tribalism not to virtue signal when the leadership does that.  In case of the right,  neither the first happens enough,  and when it does, the second doesn&rsquo;t happen.</li>
 
@@ -953,8 +982,8 @@ Now think of the RW, exact opposite on each of these.
 </div>
 </div>
 <div id="outline-container-orgdd3dbe3" class="outline-3">
-<h3 id="orgdd3dbe3"><span class="section-number-3">4.7.</span> micro-targeting</h3>
-<div class="outline-text-3" id="text-4-7">
+<h3 id="orgdd3dbe3"><span class="section-number-3">5.7.</span> micro-targeting</h3>
+<div class="outline-text-3" id="text-5-7">
 <p>
 <p class="byline">Published on <a href="https://x.com/Me_Predictor/status/1835752044931473673">Twitter</a> by <a href="https://x.com/Me_Predictor">@Me_Predictor</a></p>
 Congressi micro targeting ( maybe I might be making them out to be smarter than they are but think this is true) works like this:
@@ -977,12 +1006,12 @@ Congressi micro targeting ( maybe I might be making them out to be smarter than 
 </div>
 </div>
 <div id="outline-container-org1beda83" class="outline-2">
-<h2 id="org1beda83"><span class="section-number-2">5.</span> Misc</h2>
-<div class="outline-text-2" id="text-5">
+<h2 id="org1beda83"><span class="section-number-2">6.</span> Misc</h2>
+<div class="outline-text-2" id="text-6">
 </div>
 <div id="outline-container-orgcd4e4e0" class="outline-3">
-<h3 id="orgcd4e4e0"><span class="section-number-3">5.1.</span> sub sub sub jati</h3>
-<div class="outline-text-3" id="text-5-1">
+<h3 id="orgcd4e4e0"><span class="section-number-3">6.1.</span> sub sub sub jati</h3>
+<div class="outline-text-3" id="text-6-1">
 <p>
 <p class="byline">Published on <a href="https://x.com/Rjrasva/status/1158583239424008192">Twitter</a> by <a href="https://x.com/Rjrasva">@Rjrasva</a></p>
 yes very great, u will build a great Hindu raj out of ur 1000 members of the pure sub sub sub sub sub sub jati
@@ -994,8 +1023,8 @@ china, amreeka, sullas r all quaking in their boots abt facing such a mighty ene
 </div>
 </div>
 <div id="outline-container-orgf4d1dce" class="outline-3">
-<h3 id="orgf4d1dce"><span class="section-number-3">5.2.</span> McAdams&rsquo; eternal boomer wisdom</h3>
-<div class="outline-text-3" id="text-5-2">
+<h3 id="orgf4d1dce"><span class="section-number-3">6.2.</span> McAdams&rsquo; eternal boomer wisdom</h3>
+<div class="outline-text-3" id="text-6-2">
 <p>
 <p class="byline">Published on <a href="https://x.com/Balancing_Actor/status/1662313231103426560">Twitter</a> by <a href="https://x.com/Balancing_Actor">@Balancing_Actor</a></p>
 Few truths that will hold for most of your life.
@@ -1088,8 +1117,8 @@ Most underrated thread on this app. I would add:
 </div>
 </div>
 <div id="outline-container-org51c6894" class="outline-3">
-<h3 id="org51c6894"><span class="section-number-3">5.3.</span> white guilt</h3>
-<div class="outline-text-3" id="text-5-3">
+<h3 id="org51c6894"><span class="section-number-3">6.3.</span> white guilt</h3>
+<div class="outline-text-3" id="text-6-3">
 <p>
 <p class="byline">Published on <a href="https://x.com/Indian_Bronson/status/1658452152769994753">Twitter</a> by <a href="https://x.com/Indian_Bronson">@Indian_Bronson</a></p>
 White Guilt is just a covert way of trying to feel esteem from White Supremacy.
@@ -1117,8 +1146,8 @@ That is precisely the pose you see adopted (out of status necessity) by men even
 </div>
 </div>
 <div id="outline-container-org58d67cb" class="outline-3">
-<h3 id="org58d67cb"><span class="section-number-3">5.4.</span> this dipshit ankit mishra</h3>
-<div class="outline-text-3" id="text-5-4">
+<h3 id="org58d67cb"><span class="section-number-3">6.4.</span> this dipshit ankit mishra</h3>
+<div class="outline-text-3" id="text-6-4">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1950433966617776262">Twitter</a></p>
 The right mistakes volume for argument, and outrage for ideology.
@@ -1126,8 +1155,8 @@ The right mistakes volume for argument, and outrage for ideology.
 </div>
 </div>
 <div id="outline-container-org6882465" class="outline-3">
-<h3 id="org6882465"><span class="section-number-3">5.5.</span> elite factionalism</h3>
-<div class="outline-text-3" id="text-5-5">
+<h3 id="org6882465"><span class="section-number-3">6.5.</span> elite factionalism</h3>
+<div class="outline-text-3" id="text-6-5">
 <p>
 <p class="byline">Published on <a href="https://x.com/okaythenme/status/1835201905678860728">Twitter</a> by <a href="https://x.com/okaythenme">@okaythenme</a></p>
 </p>
@@ -1168,8 +1197,8 @@ This is why even if Trump somehow manages to pull off another shocker in Novembe
 </div>
 </div>
 <div id="outline-container-orga254842" class="outline-3">
-<h3 id="orga254842"><span class="section-number-3">5.6.</span> baby boom</h3>
-<div class="outline-text-3" id="text-5-6">
+<h3 id="orga254842"><span class="section-number-3">6.6.</span> baby boom</h3>
+<div class="outline-text-3" id="text-6-6">
 <p>
 <p class="byline">Published on <a href="https://x.com/cremieuxrecueil/status/1824491117779251490">Twitter</a> by <a href="https://x.com/cremieuxrecueil">@cremieuxrecueil</a></p>
 During the Manhattan Project, there was a baby boom among the scientists.
@@ -1210,8 +1239,8 @@ Since the town of Los Alamos did not officially exist, everyone born at the site
 </div>
 </div>
 <div id="outline-container-org7b62be6" class="outline-3">
-<h3 id="org7b62be6"><span class="section-number-3">5.7.</span> Polite fictions</h3>
-<div class="outline-text-3" id="text-5-7">
+<h3 id="org7b62be6"><span class="section-number-3">6.7.</span> Polite fictions</h3>
+<div class="outline-text-3" id="text-6-7">
 <p>
 <p class="byline">Published on <a href="https://x.com/nixonist/status/1817726711317909617">Twitter</a> by <a href="https://x.com/nixonist">@nixonist</a></p>
 </p>
@@ -1246,8 +1275,8 @@ Imagine how confused kids today must be about basic aspects of reality. Parents 
 </div>
 </div>
 <div id="outline-container-org76cfaf4" class="outline-3">
-<h3 id="org76cfaf4"><span class="section-number-3">5.8.</span> Advanced Pakistani Sociology</h3>
-<div class="outline-text-3" id="text-5-8">
+<h3 id="org76cfaf4"><span class="section-number-3">6.8.</span> Advanced Pakistani Sociology</h3>
+<div class="outline-text-3" id="text-6-8">
 <p>
 <p class="byline">Also published on <a href="https://x.com/JhalaZalimSingh/status/1950942359103148352">Twitter</a></p>
 A wise man once said &ldquo;Pakistanis are absolutely shameless. Tum inke samne inki ma ch*d do &amp; they will boast hmne tumhe nanga dekha hai&rdquo;
@@ -1260,8 +1289,8 @@ A wise man once said &ldquo;Pakistanis are absolutely shameless. Tum inke samne 
 </div>
 </div>
 <div id="outline-container-orgd6d2bac" class="outline-3">
-<h3 id="orgd6d2bac"><span class="section-number-3">5.9.</span> American foreign policy</h3>
-<div class="outline-text-3" id="text-5-9">
+<h3 id="orgd6d2bac"><span class="section-number-3">6.9.</span> American foreign policy</h3>
+<div class="outline-text-3" id="text-6-9">
 <p>
 <p class="byline">Published on <a href="https://x.com/LoliCongress/status/1851900087854932475">Twitter</a> by <a href="https://x.com/LoliCongress">@LoliCongress</a></p>
 Donald Trump&rsquo;s point that &ldquo;It&rsquo;s a shame Iraq wasn&rsquo;t actually about the Oil&rdquo; is such an amazing point because as much as the Liberals wish American policy was driven by realist and corporate interests of natural resource extraction, the Truth is far more stupid.
@@ -1281,8 +1310,8 @@ Aside from certain extraordinary Secretary of States and Presidents, it&rsquo;s 
 </div>
 </div>
 <div id="outline-container-org459fd55" class="outline-3">
-<h3 id="org459fd55"><span class="section-number-3">5.10.</span> Rahul Gandhi</h3>
-<div class="outline-text-3" id="text-5-10">
+<h3 id="org459fd55"><span class="section-number-3">6.10.</span> Rahul Gandhi</h3>
+<div class="outline-text-3" id="text-6-10">
 <p>
 those who thought he was naive and stupid should know he is now most frustrated, cunning, ruthless and arrogant man without any principles or ideology, who can even sell his country for his desire to be PM
 </p>
@@ -1292,7 +1321,7 @@ those who thought he was naive and stupid should know he is now most frustrated,
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-11-18 Tue 01:57</p>
 </div>
 </body>
 </html>
