--- a/politics/rhetorical-advice/copology.html
+++ b/politics/rhetorical-advice/copology.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-02 Sun 13:15 -->
+<!-- 2025-11-18 Tue 01:59 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Cope-ologia</title>
@@ -201,6 +201,14 @@
 </div>
 <div id="content" class="content">
 <h1 class="title">Cope-ologia</h1>
+<div id="table-of-contents" role="doc-toc">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents" role="doc-toc">
+<ul>
+<li><a href="#orge713d49">1. rationalizing shitlibbery</a></li>
+</ul>
+</div>
+</div>
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1983030716502835378">Twitter</a></p>
 This is a great example of libertarians, centrist-liberals and rāytās doing what I term &ldquo;Cope-ologia&rdquo; for Leftists.
@@ -261,10 +269,26 @@ You are tired of fighting, so you want to cope out a rationalization for why you
 <p>
 They won&rsquo;t.
 </p>
+<div id="outline-container-orge713d49" class="outline-2">
+<h2 id="orge713d49"><span class="section-number-2">1.</span> rationalizing shitlibbery</h2>
+<div class="outline-text-2" id="text-1">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1899319119024971791">Twitter</a></p>
+</p>
+
+<p>
+Truly hate this fake neocon rationalization for shitlibbery.
+</p>
+
+<p>
+No, wokeness is not nation-building. Romans didn&rsquo;t go tell Gauls&amp;Jews they were victims of &ldquo;Italian supremacy&rdquo;, make their woes their entire puruṣārtha and declare the Roman nation had to be dismantled for it.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-02 Sun 13:15</p>
+<p class="date">Created: 2025-11-18 Tue 01:59</p>
 </div>
 </body>
 </html>
