--- a/politics/misc/rape.html
+++ b/politics/misc/rape.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-11-18 Tue 01:58 -->
+<!-- 2025-11-18 Tue 02:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Rape in India</title>
@@ -218,7 +218,7 @@ To suggest that these <i>orders of magnitude</i> in difference are caused by und
 </p>
 
 <p>
-<img src="/img/charts/rape_selfrep.jpg" alt="rape_selfrep.jpg" />
+<img src="/img/charts/rape_selfrep.jpeg" alt="rape_selfrep.jpeg" />
 </p>
 
 <p>
@@ -294,7 +294,7 @@ and instead urged Indians to &ldquo;challenge this stereotype of the destroyed w
 </p>
 
 <p>
-(the victim subsequently died as a result of the rape.)
+(the victim subsequently died from the rape.)
 </p>
 
 <p>
@@ -366,7 +366,7 @@ Feminists should just be seen as pro-rape and pro-crime. There is no other expla
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-11-18 Tue 01:58</p>
+<p class="date">Created: 2025-11-18 Tue 02:12</p>
 </div>
 </body>
 </html>
